--- a/misvoti/static/misvoti/css/bootstrap.css
+++ b/misvoti/static/misvoti/css/bootstrap.css
@@ -9,6 +9,9 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+@-moz-document url-prefix() {
+  fieldset { display: table-cell; }
+}
 body {
   margin: 0;
 }
