--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -30,6 +30,22 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- jQuery -->
+    <script src="{% static 'misvoti/js/jquery.js' %}"></script>
+
+    {% block inicio_pagina_scripts %}
+    {% endblock %}
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'misvoti/js/bootstrap.min.js' %}"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="{% static 'misvoti/js/plugins/morris/raphael.min.js' %}"></script>
+    <script src="{% static 'misvoti/js/plugins/morris/morris.min.js' %}"></script>
+    <script src="{% static 'misvoti/js/plugins/morris/morris-data.js' %}"></script>
+    <script src="{% static 'misvoti/js/plugins/malsupform/jquery.form.js' %}"></script>
+
+    <script src="{% static 'misvoti/js/csrftokens.js' %}"></script>
 
 </head>
 
@@ -53,18 +69,8 @@
             {% if user.is_authenticated %}
             <ul class="nav navbar-right top-nav">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ request.user.username }} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
                         <li>
                             <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
@@ -78,11 +84,11 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
-                        <a href="{% url 'myhome' %}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    <li class="{{ myhome_activo }}">
+                        <a href="{% url 'myhome' %}"><i class="fa fa-fw fa-bar-chart-o"></i> Estadísticas</a>
                     </li>
-                    <li>
-                        <a href="{% url 'planes' %}"><i class="fa fa-fw fa-edit"></i> Modificar Notas</a>
+                    <li class="{{ planes_activo }}">
+                        <a href="{% url 'planes' %}"><i class="fa fa-fw fa-table"></i> Planes</a>
                     </li>
                 </ul>
             </div>
@@ -103,17 +109,9 @@
     </div>
     <!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="{% static 'misvoti/js/jquery.js' %}"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'misvoti/js/bootstrap.min.js' %}"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="{% static 'misvoti/js/plugins/morris/raphael.min.js' %}"></script>
-    <script src="{% static 'misvoti/js/plugins/morris/morris.min.js' %}"></script>
-    <script src="{% static 'misvoti/js/plugins/morris/morris-data.js' %}"></script>
-
+    {% block final_pagina_scripts %}
+    {% endblock %}
 </body>
 
 </html>
