--- a/planeador/templates/planeador/ver_plan.html
+++ b/planeador/templates/planeador/ver_plan.html
@@ -19,6 +19,8 @@
         // -- Contiene el código que se le asignará al siguiente trimestre a registrar
         var next_cod_trime = 0;
 
+        var boton_agregar_trim = null;
+
         // Redondea un numero ejem: 123.123453 a 4 cífras significativas a lo más. ejem: 123.1235
         function redondear(numero){
             return Math.round((numero + 0.00001)*10000)/10000;
@@ -227,6 +229,100 @@
             })
         }
 
+        function crear_tabla_trimestre(indice){
+            // HEAD de la tabla
+            html_tabla = ""
+            html_tabla += "<thead>";
+                html_tabla += "<tr " + "data-trimestre-codigo='" + json_datos_trims.trimestres[indice].codigo + "' >";
+                    html_tabla += "<th colspan='3'>";
+                        if(json_datos_trims.trimestres[indice].periodo == "SD"){
+                            html_tabla += "Septiembre - Diciembre";
+                        }else if(json_datos_trims.trimestres[indice].periodo == "EM"){
+                            html_tabla += "Enero - Marzo";
+                        }else if(json_datos_trims.trimestres[indice].periodo == "AJ"){
+                            html_tabla += "Abril - Julio";
+                        }else if(json_datos_trims.trimestres[indice].periodo == "JA"){
+                            html_tabla += "Julio - Agosto";
+                        }
+                        html_tabla += " " + json_datos_trims.trimestres[indice].anyo;
+                    html_tabla += "</th>";
+                    html_tabla += "<th align='left' colspan='2'>";
+                        html_tabla += '<button type="button" data-toggle="modal" data-tipo-boton="eliminar_trimestre" data-tipo-boton="eliminar-trimestre" data-target="#modal-eliminar-trim-mat" class="btn btn-danger" aria-label="Left Align">';
+                        html_tabla += '<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>';
+                        html_tabla += '</button> ';
+                    html_tabla += "</th>"; // Falta identificador de indice/materia
+                html_tabla += "</tr>"; // Falta identificador de indice/materia
+            html_tabla += "</thead>"; // Falta identificador de indice/materia
+
+            // Body
+
+            html_tabla += "<tbody>";
+                html_tabla += "<tr>";
+                    html_tabla += "<th align='center'>Código</th>";
+                    html_tabla += "<th align='center' class = 'hidden-xs'>Nombre</th>";
+                    html_tabla += "<th align='center'>Creditos</th>";
+                    html_tabla += "<th align='center'>Nota</th>";
+                    html_tabla += "<th align='right'>¿Eliminar?</th>";
+                html_tabla += "</tr>";
+
+            for( j in json_datos_trims.trimestres[indice].materias){
+                html_tabla += "<tr data-trimestre-codigo='" + json_datos_trims.trimestres[indice].codigo+ "' data-materia-codigo = '" + json_datos_trims.trimestres[indice].materias[j].codigo+ "'>";
+                    html_tabla += "<td>";
+                        html_tabla += json_datos_trims.trimestres[indice].materias[j].codigo;
+                    html_tabla += "</td>";
+                    html_tabla += "<td  class = 'hidden-xs'>";
+                        html_tabla += json_datos_trims.trimestres[indice].materias[j].nombre;
+                    html_tabla += "</td>";
+                    html_tabla += "<td align='center'>";
+                        html_tabla += json_datos_trims.trimestres[indice].materias[j].creditos;
+                    html_tabla += "</td>";
+                    html_tabla += "<td>";
+                        html_tabla += "<select class='form-control select-materia-cambiar-nota' style='width:50px;'>";
+                            for (k = 1; k <= 5; k++) {
+                                html_tabla += "<option ";
+                                if(json_datos_trims.trimestres[indice].materias[j].nota_final == k){
+                                    html_tabla+="selected";
+                                }
+                                html_tabla += ">" + k + "</option>";
+                            }
+                                html_tabla += "<option ";
+                                if(json_datos_trims.trimestres[indice].materias[j].esta_retirada){
+                                    html_tabla+="selected";
+                                }
+                                html_tabla += ">R</option>";
+                        html_tabla += "</select>";
+                    html_tabla += "</td>";
+                    html_tabla += "<td align='right'>";
+                    html_tabla += '<button type="button" data-toggle="modal" data-tipo-boton="eliminar-materia" data-target="#modal-eliminar-trim-mat" class="btn btn-warning" aria-label="Left Align">';
+                    html_tabla += '<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>';
+                    html_tabla += '</button> ';
+                    html_tabla += "</td>";
+                html_tabla += "</tr>";
+            }
+                html_tabla += "<tr>";
+                    html_tabla += "<td colspan='5' align='center'>";
+
+                    // Calculamos el indice del periodo
+                    //console.log(" acumulado: " + suma_nota_x_creditos_acumulado + "/" + creditos_que_cuentan + "= " + redondear(suma_nota_x_creditos_acumulado / creditos_que_cuentan ));
+                    html_tabla += '<button type="button" class="btn btn-primary" aria-label="Left Align">';
+                    html_tabla += '<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>';
+                    html_tabla += '</button> ';
+                    html_tabla += "</td>";
+                    html_tabla += "</td>";
+                html_tabla += "</tr>";
+
+                html_tabla += "<tr>";
+                    html_tabla += "<td colspan='5' align='center' id='td-indice-"  + json_datos_trims.trimestres[indice].codigo + "' >";
+                    html_tabla += "I.P.: NC| I.A.:NC";
+                    html_tabla += "</td>";
+                html_tabla += "</tr>";
+            html_tabla += "</tbody>";
+            return html_tabla;
+        }
+
+        function crear_boton_agrega_trim_html() {
+            boton_agregar_trim = $('<tbody><tr><td colspan="5" align="center"><button  type="button" data-toggle="modal" data-target="#modal-agregar-trim"  class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ¡Agregar un trimestre!</button></td></tr></tbody>')
+        }
         function crear_tabla_trimestres(){
             var trimestre_codigo = "";
             var html_tabla = "";
@@ -234,101 +330,13 @@
 
                 trimestre_codigo = "tri" + next_cod_trime++;
                 json_datos_trims.trimestres[i].codigo = trimestre_codigo;
-
-                // HEAD de la tabla
-                html_tabla += "<thead>";
-                    html_tabla += "<tr " + "data-trimestre-codigo='" + json_datos_trims.trimestres[i].codigo + "' >";
-                        html_tabla += "<th colspan='3'>";
-                            if(json_datos_trims.trimestres[i].periodo == "SD"){
-                                html_tabla += "Septiembre - Diciembre";
-                            }else if(json_datos_trims.trimestres[i].periodo == "EM"){
-                                html_tabla += "Enero - Marzo";
-                            }else if(json_datos_trims.trimestres[i].periodo == "AJ"){
-                                html_tabla += "Abril - Julio";
-                            }else if(json_datos_trims.trimestres[i].periodo == "JA"){
-                                html_tabla += "Julio - Agosto";
-                            }
-                            html_tabla += " " + json_datos_trims.trimestres[i].anyo;
-                        html_tabla += "</th>";
-                        html_tabla += "<th align='left' colspan='2'>";
-                            html_tabla += '<button type="button" data-toggle="modal" data-tipo-boton="eliminar_trimestre" data-tipo-boton="eliminar-trimestre" data-target="#modal-eliminar-trim-mat" class="btn btn-danger" aria-label="Left Align">';
-                            html_tabla += '<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>';
-                            html_tabla += '</button> ';
-                        html_tabla += "</th>"; // Falta identificador de i/materia
-                    html_tabla += "</tr>"; // Falta identificador de i/materia
-                html_tabla += "</thead>"; // Falta identificador de i/materia
-
-                // Body
-
-                html_tabla += "<tbody>";
-                    html_tabla += "<tr>";
-                        html_tabla += "<th align='center'>Código</th>";
-                        html_tabla += "<th align='center' class = 'hidden-xs'>Nombre</th>";
-                        html_tabla += "<th align='center'>Creditos</th>";
-                        html_tabla += "<th align='center'>Nota</th>";
-                        html_tabla += "<th align='right'>¿Eliminar?</th>";
-                    html_tabla += "</tr>";
-
-                for( j in json_datos_trims.trimestres[i].materias){
-                    html_tabla += "<tr data-trimestre-codigo='" + json_datos_trims.trimestres[i].codigo+ "' data-materia-codigo = '" + json_datos_trims.trimestres[i].materias[j].codigo+ "'>";
-                        html_tabla += "<td>";
-                            html_tabla += json_datos_trims.trimestres[i].materias[j].codigo;
-                        html_tabla += "</td>";
-                        html_tabla += "<td  class = 'hidden-xs'>";
-                            html_tabla += json_datos_trims.trimestres[i].materias[j].nombre;
-                        html_tabla += "</td>";
-                        html_tabla += "<td align='center'>";
-                            html_tabla += json_datos_trims.trimestres[i].materias[j].creditos;
-                        html_tabla += "</td>";
-                        html_tabla += "<td>";
-                            html_tabla += "<select class='form-control select-materia-cambiar-nota' style='width:50px;'>";
-                                for (k = 1; k <= 5; k++) {
-                                    html_tabla += "<option ";
-                                    if(json_datos_trims.trimestres[i].materias[j].nota_final == k){
-                                        html_tabla+="selected";
-                                    }
-                                    html_tabla += ">" + k + "</option>";
-                                }
-                                    html_tabla += "<option ";
-                                    if(json_datos_trims.trimestres[i].materias[j].esta_retirada){
-                                        html_tabla+="selected";
-                                    }
-                                    html_tabla += ">R</option>";
-                            html_tabla += "</select>";
-                        html_tabla += "</td>";
-                        html_tabla += "<td align='right'>";
-                        html_tabla += '<button type="button" data-toggle="modal" data-tipo-boton="eliminar-materia" data-target="#modal-eliminar-trim-mat" class="btn btn-warning" aria-label="Left Align">';
-                        html_tabla += '<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>';
-                        html_tabla += '</button> ';
-                        html_tabla += "</td>";
-                    html_tabla += "</tr>";
-                }
-                    html_tabla += "<tr>";
-                        html_tabla += "<td colspan='5' align='center'>";
-
-                        // Calculamos el indice del periodo
-                        //console.log(" acumulado: " + suma_nota_x_creditos_acumulado + "/" + creditos_que_cuentan + "= " + redondear(suma_nota_x_creditos_acumulado / creditos_que_cuentan ));
-                        html_tabla += '<button type="button" class="btn btn-primary" aria-label="Left Align">';
-                        html_tabla += '<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>';
-                        html_tabla += '</button> ';
-                        html_tabla += "</td>";
-                        html_tabla += "</td>";
-                    html_tabla += "</tr>";
-
-                    html_tabla += "<tr>";
-                        html_tabla += "<td colspan='5' align='center' id='td-indice-"  + json_datos_trims.trimestres[i].codigo + "' >";
-
-                        // Calculamos el indice del periodo
-                        //console.log(" acumulado: " + suma_nota_x_creditos_acumulado + "/" + creditos_que_cuentan + "= " + redondear(suma_nota_x_creditos_acumulado / creditos_que_cuentan ));
-                        html_tabla += "I.P.: NC| I.A.:NC";
-                        html_tabla += "</td>";
-                    html_tabla += "</tr>";
-                html_tabla += "</tbody>";
-
+                html_tabla += crear_tabla_trimestre(i);
             }
 
-            html_tabla += '<tbody><tr><td colspan="5" align="center"><button  type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> ¡Agregar un trimestre!</button></td></tr></tbody>';
+            //console.log(json_datos_trims.trimestres.length)
             datos_tabla_html.html(html_tabla);
+            crear_boton_agrega_trim_html();
+            datos_tabla_html.append(boton_agregar_trim)
 
         }
 
@@ -371,7 +379,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                Modificar Notas
+                Modificar Plan
             </h1>
             <ol class="breadcrumb">
                 <li>
@@ -387,7 +395,7 @@
 
     <div class="row">
         <div class="col-lg-6">
-            <h2>Datos del Plan {{ plan.nombre }}</h2>
+            <h2>Plan {{ plan.nombre }}</h2>
 
             <div class="btn-group" role="group" aria-label="...">
               <button type="button" class="btn btn-primary">Cambiar Nombre</button>
@@ -405,7 +413,7 @@
             </div>
 
             <div style="margin-top:30px;">
-                <table class = "table  table-hover" id="tabla-trimestres" >
+                <table class = "table" id="tabla-trimestres" >
                     <!--Aquí se va a poner los datos del plan dinamicamente-->
                 </table>
             </div>
@@ -431,11 +439,105 @@
       </div>
     </div>
 
+
+    <!-- Modal de agregar trimestre -->
+    <div class="modal fade" tabindex="-1"  id="modal-agregar-trim" role="dialog" aria-labelledby="mySmallModalLabel">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">¡Agrega un trimestre!</h4>
+            </div>
+            <div class="modal-body">
+                    <div class="form-group">
+                        <label class="control-label" for="id_select_periodo">Periodo</label>
+                        <select class="form-control form-component"  name="select_periodo" id="id_select_periodo">
+                            {% for x,y in periodos %}
+                                <option value="{{ x }}">{{ y }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                     <div class="form-group">
+                        <label class="control-label" for="id_select_anyo">Año</label>
+                        <select class="form-control form-component"  name="selec_anyo" id="id_select_anyo">
+                            {% for x,y in anyos %}
+                                <option value="{{ x }}" >{{ y }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+           </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" id="btn-agregar-trim">Agregar</button>
+            </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
 
 {% block final_pagina_scripts %}
     <script>
 
+        $('#modal-agregar-trim').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget); // Button that triggered the modal
+            var modal = $(this);
+            var select_periodo = modal.find("#id_select_periodo");
+            var select_anyo    = modal.find("#id_select_anyo");
+
+            var nuevo_trim_js = {};
+            nuevo_trim_js.materias = [];
+
+            if(json_datos_trims.trimestres.length == 0){
+                select_periodo.val('SD');
+                select_anyo.val(new Date().getFullYear());
+
+            }else{
+                var last_trim = json_datos_trims.trimestres[json_datos_trims.trimestres.length - 1]
+                switch (last_trim.periodo){
+                    case 'SD':
+                        select_periodo.val('EM');
+                        select_anyo.val(parseInt(last_trim.anyo) + 1);
+                        break;
+                    case 'EM':
+                        select_periodo.val('AJ');
+                        select_anyo.val(last_trim.anyo);
+                        break;
+                    case 'AJ':
+                        select_periodo.val('JA');
+                        select_anyo.val(last_trim.anyo);
+                        break;
+                    case 'JA':
+                        select_periodo.val('SD');
+                        select_anyo.val(parseInt(last_trim.anyo) + 1);
+                        break;
+
+                }
+            }
+
+
+            modal.find('#btn-agregar-trim').click(function (event) {
+                $(this).off("click");
+
+                nuevo_trim_js.periodo = select_periodo.val();
+                nuevo_trim_js.anyo = select_anyo.val();
+                nuevo_trim_js.codigo = "tri" + next_cod_trime++;
+
+                json_datos_trims.trimestres[json_datos_trims.trimestres.length] = nuevo_trim_js;
+                html_nueva_tabla_trim = crear_tabla_trimestre(json_datos_trims.trimestres.length - 1);
+
+                boton_agregar_trim.detach();
+                datos_tabla_html.append(html_nueva_tabla_trim);
+                datos_tabla_html.append(boton_agregar_trim);
+
+                //actualizar_indices();
+
+                modal.modal("hide");
+                btn_guardar_cambios.text("Guardar Cambios*");
+                btn_guardar_cambios.removeAttr("disabled");
+          });
+
+        });
 
         $('#modal-eliminar-trim-mat').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget); // Button that triggered the modal
