--- a/misvoti/templates/misvoti/base.html
+++ b/misvoti/templates/misvoti/base.html
@@ -73,7 +73,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{ request.user.username }} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="{% url 'accounts:logout' %}"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -85,9 +85,11 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
+{% comment %}
                     <li class="{{ myhome_activo }}">
                         <a href="{% url 'myhome' %}"><i class="fa fa-fw fa-bar-chart-o"></i> Estadísticas</a>
                     </li>
+{% endcomment %}
                     <li class="{{ planes_activo }}">
                         <a href="{% url 'planes' %}"><i class="fa fa-fw fa-table"></i> Planes</a>
                     </li>
